--- a/components/TradesPage/MainTradesSection/MainTradesSection.module.css
+++ b/components/TradesPage/MainTradesSection/MainTradesSection.module.css
@@ -31,7 +31,7 @@
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
-    padding: var(--space-40) 0 0 0;
+    padding: var(--space-40) 0 calc(var(--space-40)/2) 0;
   }
 }
 
