--- a/components/AboutUsPage/ValuesSection/ValuesSection.module.css
+++ b/components/AboutUsPage/ValuesSection/ValuesSection.module.css
@@ -41,7 +41,7 @@
   font-size: 30px;
   margin-bottom: 8px;
   font-weight: 700;
-  color: var(--blue);
+  color: var(--yellow);
 }
 
 .aboutDescription {
