--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,3 +1,12 @@
+.stickyHeader {
+  position: -webkit-sticky; /* For Safari */
+  position: sticky;
+  top: 0;
+  z-index: 1000; /* Ensure it appears above other content */
+  background-color: white; /* Adjust this to match your header's background */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow effect */
+}
+
 .header {
   height: rem(100px);
   padding-left: var(--mantine-spacing-md);
