--- a/components/TestimonialSection/TestimonialSection.module.css
+++ b/components/TestimonialSection/TestimonialSection.module.css
@@ -12,16 +12,16 @@
 }
 
 .mainTitle {
-  color: var(--blue);
-  font-size: var(--title-font-size);
-  line-height: 1.2;
-  font-weight: 900;
+  color: var(--blue) !important;
+  font-size: var(--title-font-size) !important;
+  line-height: 1.2 !important;
+  font-weight: 900 !important;
   text-align: center;
-  padding: calc(var(--space-40) * 2) 0;
+  padding: var(--space-40) 0 !important;
 
   @media (max-width: $mantine-breakpoint-xs) {
-    font-size: rem(28px);
-    padding: var(--space-40) 0;
+    font-size: rem(28px) !important;
+    padding: 0 0 var(--space-40) 0 !important;
   }
 }
 .description {
@@ -65,6 +65,9 @@
   }
   video {
     border-radius: 10px;
+    min-width: 250px;
+    max-height: 210px;
+    background: black;
   }
 }
 
