--- a/globals.css
+++ b/globals.css
@@ -21,7 +21,7 @@ h4,
 h5,
 h6 {
   font-family:
-    Sora,
+    var(--sora),
     ui-sans-serif,
     system-ui,
     -apple-system,
@@ -44,7 +44,7 @@ ol,
 li,
 span {
   font-family:
-    Sora,
+    var(--sora),
     ui-sans-serif,
     system-ui,
     -apple-system,
