--- a/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
+++ b/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
@@ -1,4 +1,4 @@
-.outer{
+.outer {
   background-color: var(--gray);
   padding-bottom: calc(var(--space-40) * 2);
 }
@@ -8,7 +8,7 @@
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  padding: var(--space-40) 0 ;
+  padding: var(--space-40) 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
@@ -24,4 +24,10 @@
 .jobTitle {
   font-weight: 400;
   font-size: 18px;
+}
+
+.avatar {
+  border-radius: 100%;
+  display: flex;
+  margin: 0 auto;
 }
