--- a/components/AboutUsPage/ValuesSection/ValuesSection.module.css
+++ b/components/AboutUsPage/ValuesSection/ValuesSection.module.css
@@ -1,4 +1,4 @@
-.outer{
+.outer {
   background-color: var(--gray);
 }
 
@@ -30,7 +30,7 @@
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  padding: var(--space-40) 0 ;
+  padding: var(--space-40) 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
@@ -68,8 +68,13 @@
   }
 }
 
-.stoneMan{
+.stoneMan {
   @media (max-width: $mantine-breakpoint-xs) {
     display: none;
   }
+}
+
+.numberIcon {
+  margin-right: 1rem;
+  margin-top: 1rem;
 }
