--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -65,7 +65,7 @@
     background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-7));
   }
   @media (max-width: $mantine-breakpoint-sm) {
-    > div{
+    > div {
       padding: 0 15px !important;
     }
     @mixin hover {
@@ -110,7 +110,13 @@
   width: 100%;
 }
 
-.mantine-focus-auto{
+.mantine-focus-auto {
   width: 40px;
   height: 40px;
+}
+
+@media (min-width: $mantine-breakpoint-sm) {
+  .logoImage {
+    display: none;
+  }
 }
