--- a/components/Homepage/Hero/Hero.module.css
+++ b/components/Homepage/Hero/Hero.module.css
@@ -68,6 +68,7 @@
 .image {
   margin-top: -6rem;
   max-width: 35%;
+  height: auto;
   object-fit: contain;
   @media (max-width: $mantine-breakpoint-md) {
     display: none;
