update mantine shit

--- a/components/AboutUsPage/IntroSection/IntroSection.module.css
+++ b/components/AboutUsPage/IntroSection/IntroSection.module.css
@@ -1,4 +1,4 @@
-.outer{
+.outer {
   background-color: var(--gray);
 }
 
@@ -10,16 +10,16 @@
   text-align: center;
   padding: calc(var(--space-40) * 2) 0 var(--space-40) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
     padding: var(--space-40) 0 0 0;
   }
 }
 
-  .description{
-    font-family: var(--mantine-font-family);
-    font-size: rem(21px);
-    line-height: 1.5;
-    color: var(--mantine-color-black);
-    padding-bottom: var(--mantine-spacing-lg);
-  }
+.description {
+  font-family: var(--mantine-font-family);
+  font-size: rem(21px);
+  line-height: 1.5;
+  color: var(--mantine-color-black);
+  padding-bottom: var(--mantine-spacing-lg);
+}
