--- a/components/CTA-No-Wave/CTA.module.css
+++ b/components/CTA-No-Wave/CTA.module.css
@@ -10,7 +10,7 @@
   border-radius: var(--border-radius-md);
   background-color: var(--blue);
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     flex-direction: column-reverse;
     padding: var(--mantine-spacing-xl);
     margin: 0 10px !important;
@@ -21,7 +21,7 @@
   max-width: 40%;
   height: auto;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     display: none !important;
   }
 }
@@ -30,7 +30,7 @@
   padding-right: calc(var(--mantine-spacing-xl) * 4);
   text-align: center;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     padding-right: 0;
     margin-top: var(--mantine-spacing-xl);
   }
@@ -41,7 +41,7 @@
   font-size: var(--subtitle-font-size) !important;
   line-height: 1;
   margin-bottom: 10px !important;
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     font-size: rem(28px) !important;
   }
 }
