--- a/components/CareersPage/JobsSection/JobsSection.module.css
+++ b/components/CareersPage/JobsSection/JobsSection.module.css
@@ -16,7 +16,7 @@
   background-color: var(--yellow);
   border-radius: var(--border-radius-md);
   padding: calc(var(--space-40) / 2);
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
   }
 }
@@ -30,7 +30,7 @@
 .itemTitle {
   font-size: 26px;
   color: var(--blue);
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 22px;
   }
   > * {
@@ -82,7 +82,7 @@
 
 .column {
   padding: var(--space-40);
-  @media (max-width: $mantine-breakpoint-xs) {
-    padding:0;
+  @media (max-width: 30em) {
+    padding: 0;
   }
 }
