--- a/components/ContactUsPage/CallUsSection/CallUsSection.module.css
+++ b/components/ContactUsPage/CallUsSection/CallUsSection.module.css
@@ -7,7 +7,7 @@
   background-color: var(--blue);
   padding: 3rem;
   border-radius: 10px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     margin: 0 10px;
   }
 }
@@ -33,7 +33,7 @@
   text-align: center;
   margin: 2rem 0 1rem 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
   }
 }
@@ -44,7 +44,7 @@
   line-height: 1.5;
   color: var(--white);
   margin-bottom: var(--mantine-spacing-lg);
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     margin-bottom: 1rem;
   }
   a {
@@ -69,7 +69,7 @@
   &:last-of-type {
     border: none;
   }
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     border-right: none;
     border-bottom: 1px solid var(--border-color);
     padding-right: 0;
