--- a/components/Homepage/Feature5/Feature5.module.css
+++ b/components/Homepage/Feature5/Feature5.module.css
@@ -5,7 +5,7 @@
   background-size: 100%;
   padding-bottom: 148px;
   margin-bottom: -1px !important;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     padding-bottom: 75px;
   }
 }
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: calc(var(--space-40) * 2);
-  @media (max-width: $mantine-breakpoint-md) {
+  @media (max-width: 62em) {
     flex-direction: column;
   }
 }
@@ -21,7 +21,7 @@
 .content {
   max-width: 55%;
 
-  @media (max-width: $mantine-breakpoint-md) {
+  @media (max-width: 62em) {
     max-width: 100%;
     margin-right: 0;
   }
@@ -35,7 +35,7 @@
   text-align: center;
   padding: calc(var(--space-40) * 2) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
     padding: var(--space-40) 0;
   }
@@ -47,7 +47,7 @@
   line-height: 1.2;
   font-weight: 700;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(26px);
   }
 }
@@ -55,7 +55,7 @@
 .description {
   font-style: italic;
   font-size: 20px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 18px;
   }
 }
@@ -64,7 +64,7 @@
   border-radius: var(--border-radius-sm);
   margin-top: var(--space-40);
   transition: all 0.3s;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     flex: 1;
   }
 }
@@ -78,7 +78,7 @@
   margin-right: calc(var(--mantine-spacing-xl) * 3);
   object-fit: contain;
 
-  @media (max-width: $mantine-breakpoint-md) {
+  @media (max-width: 62em) {
     margin-right: 0;
     max-width: 100%;
   }
@@ -90,7 +90,7 @@
   margin-bottom: 5px;
   color: var(--yellow);
   margin-left: 5px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 16px;
   }
 }
@@ -99,7 +99,7 @@
   font-size: 16px;
   line-height: 1.625;
   margin-bottom: 10px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 15px;
   }
 }
