--- a/components/Homepage/TestimonialSection/TestimonialSection.module.css
+++ b/components/Homepage/TestimonialSection/TestimonialSection.module.css
@@ -6,7 +6,7 @@
   background-size: 100%;
   padding-bottom: 148px;
   margin-bottom: -1px !important;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     padding-bottom: 20px;
   }
 }
@@ -27,7 +27,7 @@
   text-align: center;
   padding: calc(var(--space-40) * 2) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
     padding: var(--space-40) 0;
   }
@@ -53,7 +53,7 @@
   padding: 0 1rem !important;
   margin: 20px 0 !important;
   font-size: 18px !important;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 16px !important;
   }
 }
@@ -65,7 +65,7 @@
   height: 100%;
   background-color: var(--white);
   margin-bottom: 40px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     flex-direction: column;
     height: fit-content;
     max-height: 100%;
@@ -92,7 +92,7 @@
 
 .root {
   margin: 0 3.5rem;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     margin: 0 1.5rem;
   }
   .controls {
@@ -108,7 +108,7 @@
         width: 100px !important;
         height: 100px !important;
         stroke: var(--yellow);
-        @media (max-width: $mantine-breakpoint-xs) {
+        @media (max-width: 30em) {
           width: 50px !important;
           height: 50px !important;
         }
@@ -116,7 +116,7 @@
     }
     .control:nth-of-type(1) {
       margin-left: -4.5rem;
-      @media (max-width: $mantine-breakpoint-xs) {
+      @media (max-width: 30em) {
         margin-left: -2.5rem;
       }
     }
@@ -127,7 +127,7 @@
     }
     .control:nth-of-type(2) {
       margin-right: -4.5rem;
-      @media (max-width: $mantine-breakpoint-xs) {
+      @media (max-width: 30em) {
         margin-right: -2.5rem;
       }
     }
