--- a/components/OurProcessPage/Step1/Step1.module.css
+++ b/components/OurProcessPage/Step1/Step1.module.css
@@ -15,7 +15,7 @@
   align-content: center;
   text-align: center;
 
-  @media (max-width: $mantine-breakpoint-md) {
+  @media (max-width: 62em) {
     max-width: 100%;
     margin-right: 0;
   }
@@ -27,7 +27,7 @@
   line-height: 1.2;
   font-weight: 900;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(24px);
   }
 }
@@ -38,7 +38,7 @@
 }
 
 .control {
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     flex: 1;
   }
 }
@@ -47,7 +47,7 @@
   width: rem(200px);
   height: rem(200px);
   margin: auto;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     width: rem(150px);
     height: rem(150px);
     margin: auto;
@@ -61,7 +61,7 @@
   padding: rem(4px) rem(12px);
 }
 
-.line{
+.line {
   position: relative;
   top: 58px;
   transform: rotate(34deg);
@@ -69,6 +69,6 @@
   width: 550px;
 }
 
-.image{
+.image {
   z-index: 2;
 }
