--- a/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
+++ b/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
@@ -10,7 +10,7 @@
   text-align: center;
   padding: var(--space-40) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
   }
 }
