--- a/components/AboutUsPage/ValuesSection/ValuesSection.module.css
+++ b/components/AboutUsPage/ValuesSection/ValuesSection.module.css
@@ -32,7 +32,7 @@
   text-align: center;
   padding: var(--space-40) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
   }
 }
@@ -69,7 +69,7 @@
 }
 
 .stoneMan {
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     display: none;
   }
 }
