--- a/components/CTA-Wave/CTA.module.css
+++ b/components/CTA-Wave/CTA.module.css
@@ -7,7 +7,7 @@
   padding-bottom: 148px;
   padding-top: var(--space-40);
   margin-bottom: -1px !important;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     padding-bottom: 75px;
   }
 }
@@ -19,7 +19,7 @@
   border-radius: var(--border-radius-md);
   background-color: var(--blue);
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     flex-direction: column-reverse;
     padding: var(--mantine-spacing-xl);
     margin: 0 10px !important;
@@ -30,7 +30,7 @@
   max-width: 40%;
   height: auto;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     display: none !important;
   }
 }
@@ -39,7 +39,7 @@
   padding-right: calc(var(--mantine-spacing-xl) * 4);
   text-align: center;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     padding-right: 0;
     margin-top: var(--mantine-spacing-xl);
   }
@@ -50,7 +50,7 @@
   font-size: var(--subtitle-font-size) !important;
   line-height: 1;
   margin-bottom: 10px !important;
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     font-size: 28px !important;
   }
 }
