--- a/components/FeaturePages/IntroSection/IntroSection.module.css
+++ b/components/FeaturePages/IntroSection/IntroSection.module.css
@@ -6,7 +6,7 @@
   background-size: 100%;
   padding-bottom: 148px;
   margin-bottom: -1px !important;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     padding-bottom: 75px;
   }
 }
@@ -19,7 +19,7 @@
   background-size: 100%;
   padding-bottom: 148px;
   margin-bottom: -1px !important;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     padding-bottom: 75px;
   }
 }
@@ -32,7 +32,7 @@
   text-align: center;
   padding: calc(var(--space-40) * 2) 0 var(--space-40) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
     padding: var(--space-40) 0;
   }
@@ -46,7 +46,7 @@
   text-align: center;
   padding: var(--space-40) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
   }
 }
@@ -56,7 +56,7 @@
   video {
     border-radius: 10px;
   }
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     padding: 15px 10px;
   }
 }
@@ -75,14 +75,14 @@
 
 .statistic:nth-of-type(2) {
   margin: 5px 0;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     margin: 2.5px 0;
   }
 }
 
 .statistic:nth-of-type(1) {
   margin-bottom: 5px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     margin-top: 20px;
     margin-bottom: 2.5px;
   }
@@ -90,7 +90,7 @@
 
 .statistic:nth-of-type(3) {
   margin-top: 5px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     margin-top: 2.5px;
   }
 }
@@ -100,7 +100,7 @@
   font-weight: 700;
   margin-bottom: 10px;
   text-align: center;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 24px;
   }
 }
@@ -130,7 +130,7 @@
   font-size: 28px;
   margin: 5px 0 15px 0;
   color: var(--yellow);
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 24px;
   }
 }
@@ -139,7 +139,7 @@
   width: 80px;
   height: 80px;
   margin-right: 1rem;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     width: 60px;
     height: 60px;
   }
