--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -7,7 +7,7 @@
 .bigCta {
   max-width: rem(200px);
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,7 +17,7 @@
 }
 
 .logo {
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     justify-content: center;
   }
 }
@@ -27,7 +27,7 @@
   font-weight: 700 !important;
   color: var(--white) !important;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     margin-top: var(--mantine-spacing-xs);
     text-align: center;
   }
@@ -37,7 +37,7 @@
   display: flex;
   justify-content: space-between;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     flex-direction: column;
     align-items: center;
   }
@@ -54,7 +54,7 @@
 
 .wrapper:nth-of-type(4) {
   margin-top: 1.74rem;
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     margin-top: -1rem;
   }
 }
@@ -76,7 +76,7 @@
   &:hover {
     text-decoration: underline;
   }
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     font-size: 14px !important;
   }
 }
@@ -95,13 +95,13 @@
   margin-top: var(--mantine-spacing-lg);
   padding-bottom: var(--mantine-spacing-xl);
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     flex-direction: column;
   }
 }
 
 .social {
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     margin-top: var(--mantine-spacing-xs);
   }
 }
@@ -122,7 +122,7 @@
 }
 
 .ctaDiv {
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     display: none !important;
   }
 }
