--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,10 +1,10 @@
 .stickyHeader {
-  position: -webkit-sticky; 
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 1000; 
-  background-color: white; 
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
+  z-index: 1000;
+  background-color: white;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .header {
@@ -30,7 +30,7 @@
   font-weight: 500;
   font-size: 16px;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     height: rem(60px);
     width: 100%;
     font-size: 22px;
@@ -64,7 +64,7 @@
   @mixin hover {
     background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-7));
   }
-  @media (max-width: $mantine-breakpoint-sm) {
+  @media (max-width: 48em) {
     > div {
       padding: 0 15px !important;
     }
@@ -115,7 +115,7 @@
   height: 40px;
 }
 
-@media (min-width: $mantine-breakpoint-sm) {
+@media (min-width: 48em) {
   .logoImage {
     display: none;
   }
