--- a/components/Homepage/Feature4/Feature4.module.css
+++ b/components/Homepage/Feature4/Feature4.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: calc(var(--space-40) * 2);
-  @media (max-width: $mantine-breakpoint-md) {
+  @media (max-width: 62em) {
     flex-direction: column-reverse;
   }
 }
@@ -10,7 +10,7 @@
 .content {
   max-width: 55%;
 
-  @media (max-width: $mantine-breakpoint-md) {
+  @media (max-width: 62em) {
     max-width: 100%;
     margin-right: 0;
   }
@@ -24,7 +24,7 @@
   text-align: center;
   padding: calc(var(--space-40) * 2) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
     padding: var(--space-40) 0;
   }
@@ -36,7 +36,7 @@
   line-height: 1.2;
   font-weight: 700;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(26px);
   }
 }
@@ -44,7 +44,7 @@
 .description {
   font-style: italic;
   font-size: 20px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 18px;
   }
 }
@@ -53,7 +53,7 @@
   border-radius: var(--border-radius-sm);
   margin-top: var(--space-40);
   transition: all 0.3s;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     flex: 1;
   }
 }
@@ -67,7 +67,7 @@
   margin-left: calc(var(--mantine-spacing-xl) * 3);
   object-fit: contain;
 
-  @media (max-width: $mantine-breakpoint-md) {
+  @media (max-width: 62em) {
     margin-left: 0;
     max-width: 100%;
   }
@@ -79,7 +79,7 @@
   margin-bottom: 5px;
   color: var(--yellow);
   margin-left: 5px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 16px;
   }
 }
@@ -88,7 +88,7 @@
   font-size: 16px;
   line-height: 1.625;
   margin-bottom: 10px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 15px;
   }
 }
