--- a/components/Homepage/PartnersSection/PartnersSection.module.css
+++ b/components/Homepage/PartnersSection/PartnersSection.module.css
@@ -6,7 +6,7 @@
   background-size: 100%;
   padding-bottom: 146px;
   margin-bottom: -1px !important;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     padding-bottom: 75px;
   }
 }
@@ -29,7 +29,7 @@
   text-align: center;
   padding: calc(var(--space-40) * 2) 0 var(--space-40) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
     padding: var(--space-40) 0;
   }
@@ -48,7 +48,7 @@
   filter: brightness(0) invert(1);
 }
 
-.image{
+.image {
   height: auto;
   width: 100%;
 }
