--- a/components/Homepage/WhoWeServeSection/WhoWeServeSection.module.css
+++ b/components/Homepage/WhoWeServeSection/WhoWeServeSection.module.css
@@ -7,7 +7,7 @@
   background-size: 100%;
   padding-bottom: 148px;
   margin-bottom: -1px !important;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     padding-bottom: 75px;
   }
 }
@@ -22,7 +22,7 @@
   border-radius: 10px;
   text-align: center;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     display: block;
   }
 }
@@ -44,7 +44,7 @@
   text-align: center;
   padding: calc(var(--space-40) * 2) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
     padding: 0 0 var(--space-40) 0;
   }
@@ -64,14 +64,14 @@
     border-radius: 10px 10px 0 0;
     width: 100%;
   }
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     width: calc(100vw - 130px);
     font-size: rem(28px);
   }
 }
 .root {
   margin: 0 3.5rem;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     margin: 0 1.5rem;
   }
   .controls {
@@ -87,7 +87,7 @@
         width: 100px !important;
         height: 100px !important;
         stroke: var(--yellow);
-        @media (max-width: $mantine-breakpoint-xs) {
+        @media (max-width: 30em) {
           width: 50px !important;
           height: 50px !important;
         }
@@ -95,7 +95,7 @@
     }
     .control:nth-of-type(1) {
       margin-left: -4.5rem;
-      @media (max-width: $mantine-breakpoint-xs) {
+      @media (max-width: 30em) {
         margin-left: -2.5rem;
       }
     }
@@ -106,7 +106,7 @@
     }
     .control:nth-of-type(2) {
       margin-right: -4.5rem;
-      @media (max-width: $mantine-breakpoint-xs) {
+      @media (max-width: 30em) {
         margin-right: -2.5rem;
       }
     }
