--- a/components/OurProcessPage/IntroSection/IntroSection.module.css
+++ b/components/OurProcessPage/IntroSection/IntroSection.module.css
@@ -2,17 +2,16 @@
   background-color: var(--gray);
 }
 
-
 .mainTitle {
   color: var(--blue);
   font-size: var(--title-font-size);
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  padding: calc(var(--space-40) * 2) 0 ;
+  padding: calc(var(--space-40) * 2) 0;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px);
-    padding: var(--space-40) 0 ;
+    padding: var(--space-40) 0;
   }
 }
