--- a/components/TestimonialSection/TestimonialSection.module.css
+++ b/components/TestimonialSection/TestimonialSection.module.css
@@ -19,7 +19,7 @@
   text-align: center;
   padding: var(--space-40) 0 !important;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: rem(28px) !important;
     padding: 0 0 var(--space-40) 0 !important;
   }
@@ -45,7 +45,7 @@
   padding: 0 1rem !important;
   margin: 20px 0 !important;
   font-size: 18px !important;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     font-size: 16px !important;
   }
 }
@@ -57,7 +57,7 @@
   height: 100%;
   background-color: var(--white);
   margin-bottom: 40px;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     flex-direction: column;
     height: fit-content;
     max-height: 100%;
@@ -84,7 +84,7 @@
 
 .root {
   margin: 0 3.5rem;
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: 30em) {
     margin: 0 1.5rem;
   }
   .controls {
@@ -100,7 +100,7 @@
         width: 100px !important;
         height: 100px !important;
         stroke: var(--yellow);
-        @media (max-width: $mantine-breakpoint-xs) {
+        @media (max-width: 30em) {
           width: 50px !important;
           height: 50px !important;
         }
@@ -108,7 +108,7 @@
     }
     .control:nth-of-type(1) {
       margin-left: -4.5rem;
-      @media (max-width: $mantine-breakpoint-xs) {
+      @media (max-width: 30em) {
         margin-left: -2.5rem;
       }
     }
@@ -119,7 +119,7 @@
     }
     .control:nth-of-type(2) {
       margin-right: -4.5rem;
-      @media (max-width: $mantine-breakpoint-xs) {
+      @media (max-width: 30em) {
         margin-right: -2.5rem;
       }
     }
