--- a/components/Homepage/Feature2/Feature2.module.css
+++ b/components/Homepage/Feature2/Feature2.module.css
@@ -1,9 +1,21 @@
+.outer {
+  background-image: url('/images/bg_white.svg');
+  background-position: 50% 100%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding-bottom: 148px;
+  margin-bottom: -1px !important;
+  @media (max-width: 30em) {
+    padding-bottom: 75px;
+  }
+}
+
 .inner {
   display: flex;
   justify-content: space-between;
   margin-top: calc(var(--space-40) * 2);
   @media (max-width: 62em) {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 }
 
@@ -65,11 +77,12 @@
 .image {
   max-width: 45%;
   height: auto;
-  margin-left: calc(var(--mantine-spacing-xl) * 3);
+  clip-path: inset(2px);
+  margin-right: calc(var(--mantine-spacing-xl) * 3);
   object-fit: contain;
 
   @media (max-width: 62em) {
-    margin-left: 0;
+    margin-right: 0;
     max-width: 100%;
   }
 }
