--- a/components/Homepage/Feature1/Feature1.module.css
+++ b/components/Homepage/Feature1/Feature1.module.css
@@ -63,6 +63,7 @@
 
 .image {
   max-width: 45%;
+  clip-path: inset(2px);
   height: auto;
   margin-right: calc(var(--mantine-spacing-xl) * 3);
   object-fit: contain;
