--- a/components/Homepage/Feature3/Feature3.module.css
+++ b/components/Homepage/Feature3/Feature3.module.css
@@ -64,6 +64,7 @@
 
 .image {
   max-width: 45%;
+  clip-path: inset(2px);
   height: auto;
   margin-right: calc(var(--mantine-spacing-xl) * 3);
   object-fit: contain;
