--- a/components/Homepage/Feature5/Feature5.module.css
+++ b/components/Homepage/Feature5/Feature5.module.css
@@ -1,3 +1,15 @@
+.outer {
+  background-image: url('/images/bg_white.svg');
+  background-position: 50% 100%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding-bottom: 148px;
+  margin-bottom: -1px !important;
+  @media (max-width: 30em) {
+    padding-bottom: 75px;
+  }
+}
+
 .inner {
   display: flex;
   justify-content: space-between;
@@ -66,11 +78,11 @@
   max-width: 45%;
   clip-path: inset(2px);
   height: auto;
-  margin-left: calc(var(--mantine-spacing-xl) * 3);
+  margin-right: calc(var(--mantine-spacing-xl) * 3);
   object-fit: contain;
 
   @media (max-width: 62em) {
-    margin-left: 0;
+    margin-right: 0;
     max-width: 100%;
   }
 }
