--- a/components/Homepage/TestimonialSection/TestimonialSection.module.css
+++ b/components/Homepage/TestimonialSection/TestimonialSection.module.css
@@ -77,17 +77,30 @@
     max-height: 210px;
     background: black;
   }
+  img {
+    border-radius: 10px;
+    min-width: 250px;
+    max-height: 210px;
+    background: black;
+    object-fit: contain;
+    width: auto;
+    height: 100%;
+    display: block;
+  }
+  .star {
+    width: rem(22px);
+    height: rem(22px);
+    min-width: auto;
+    max-height: auto;
+    border-radius: 0;
+    background-color: transparent;
+  }
 }
 
 .stars {
   padding-left: 1rem;
   display: flex;
   align-items: center;
-}
-
-.star {
-  width: rem(22px);
-  height: rem(22px);
 }
 
 .root {
@@ -141,7 +154,7 @@
   padding: 0;
 }
 
-.testimonialsLink{
+.testimonialsLink {
   font-weight: 900 !important;
   color: var(--mantine-color-black) !important;
   line-height: 1.2 !important;
@@ -152,7 +165,7 @@
   transition: all 0.3s;
 }
 
-.linkDiv{
+.linkDiv {
   align-items: end;
   text-decoration: none;
   svg {
@@ -163,12 +176,11 @@
     transition: all 0.3s;
   }
   &:hover {
-    svg{
+    svg {
       stroke: var(--dark-yellow);
     }
-    .testimonialsLink{
+    .testimonialsLink {
       color: var(--dark-yellow) !important;
     }
   }
-
 }
