--- a/components/Homepage/WhyChooseUsSection/WhyChooseUsSection.module.css
+++ b/components/Homepage/WhyChooseUsSection/WhyChooseUsSection.module.css
@@ -24,14 +24,14 @@
 
 .mainTitle {
   color: var(--blue);
-  font-size: var(--title-font-size);
+  font-size: var(--title-font-size) !important;
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
   padding: calc(var(--space-40) * 2) 0;
 
   @media (max-width: 30em) {
-    font-size: rem(28px);
+    font-size: rem(28px) !important;
     padding: var(--space-40) 0;
   }
 }
