--- a/components/Homepage/Feature5/Feature5.module.css
+++ b/components/Homepage/Feature5/Feature5.module.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
   margin-top: calc(var(--space-40) * 2);
   @media (max-width: 62em) {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 }
 
