--- a/components/Homepage/Faq/Faq.module.css
+++ b/components/Homepage/Faq/Faq.module.css
@@ -34,6 +34,9 @@
   }
   > * {
     font-weight: 600 !important;
+    @media (max-width: 30em) {
+    font-weight: 800 !important;
+    }
   }
   svg {
     height: 30px !important;
