--- a/components/OurProcessPage/Step2/Step2.module.css
+++ b/components/OurProcessPage/Step2/Step2.module.css
@@ -67,6 +67,9 @@
   transform: rotate(-34deg);
   left: 304px;
   width: 550px;
+  @media (max-width: 30em) {
+    display: none;
+  }
 }
 
 .image {
