--- a/components/PricingPage/PriceContainer/PriceContainer.module.css
+++ b/components/PricingPage/PriceContainer/PriceContainer.module.css
@@ -49,6 +49,7 @@
   display: flex;
   align-items: center;
   gap: 5;
+  transition: all 0.3s;
 }
 
 .cardBox1 {
@@ -65,7 +66,7 @@
     width: fit-content;
     height: fit-content;
     margin: 0 20px;
-
+    padding-inline: .5rem;
     border-radius: 0.7rem;
   }
   @media (min-width: 756px) and (max-width: 820px) {
@@ -89,6 +90,7 @@
     width: fit-content;
     height: fit-content;
     margin: 0 20px;
+    padding-inline: .5rem;
     border-radius: 0.7rem;
   }
 
@@ -112,7 +114,7 @@
     width: fit-content;
     height: fit-content;
     margin: 0 20px;
-
+    padding-inline: .5rem;
     border-radius: 0.7rem;
   }
   @media (min-width: 756px) and (max-width: 820px) {
@@ -158,6 +160,8 @@
   margin-left: 0.5rem;
   color: red;
   margin-top: 0.25rem;
+  font-size: 20px;
+  transition: all 0.3s;
 }
 
 .everythingDiv {
@@ -196,4 +200,18 @@
   span {
     font-weight: 700 !important;
   }
+}
+
+.discountBox {
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.fadeIn {
+  opacity: 1;
+  transform: translateX(0); 
+}
+
+.fadeOut {
+  opacity: 0;
+  transform: translateX(-100%);
 }
