--- a/components/TestimonialSection/TestimonialSection.module.css
+++ b/components/TestimonialSection/TestimonialSection.module.css
@@ -68,6 +68,9 @@
     min-width: 250px;
     max-height: 210px;
     background: black;
+    @media (min-width: 30em) {
+      max-width: 250px;
+    }
   }
   img {
     border-radius: 10px;
