--- a/components/Homepage/Hero/Hero.module.css
+++ b/components/Homepage/Hero/Hero.module.css
@@ -150,6 +150,9 @@
 .avatar:nth-child(4) {
   margin-left: -0.5rem;
 }
+.avatar:nth-child(5) {
+  margin-left: -0.5rem;
+}
 
 .avatar {
   border: 2px solid white;
