--- a/components/Homepage/TestimonialSection/TestimonialSection.module.css
+++ b/components/Homepage/TestimonialSection/TestimonialSection.module.css
@@ -28,7 +28,7 @@
   padding: calc(var(--space-40) * 2) 0;
 
   @media (max-width: 30em) {
-    font-size: rem(28px);
+    font-size: rem(28px) !important;
     padding: var(--space-40) 0;
   }
 }
