--- a/components/LazyLoadVideo/LazyLoadVideo.module.css
+++ b/components/LazyLoadVideo/LazyLoadVideo.module.css
@@ -2,3 +2,42 @@
     width: 100% !important;
     height: auto !important;
 }
+
+.videoContainer {
+    position: relative;
+    display: inline-block; /* Ensures the container wraps tightly around its content */
+    width: 100%;
+  }
+  
+  .image {
+    width: 100%;
+    height: auto;
+  }
+  
+  .video {
+    width: 100%;
+    height: auto;
+  }
+  
+  .spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 40px;
+    border: 4px solid white;
+    border-radius: 50%;
+    border-top-color: rgb(232,167,67);
+    animation: spin 1s ease-in-out infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100% {
+      transform: translate(-50%, -50%) rotate(360deg);
+    }
+  }
+  
