--- a/components/PricingPage/PriceContainer/PriceContainer.module.css
+++ b/components/PricingPage/PriceContainer/PriceContainer.module.css
@@ -52,33 +52,10 @@
   transition: all 0.3s;
 }
 
-.cardBox1 {
-  box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
-  height: 45rem;
-  width: 27rem;
-  padding-inline: 1.5rem;
-  border-radius: 0.7rem 0 0 0.7rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  @media (max-width: 30em) {
-    width: fit-content;
-    height: fit-content;
-    margin: 0 20px;
-    padding-inline: .5rem;
-    border-radius: 0.7rem;
-  }
-  @media (min-width: 756px) and (max-width: 820px) {
-    width: 15rem;
-    border-radius: 0.7rem 0 0 0.7rem;
-  }
-}
-
 .cardBox2 {
   box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
-  height: 48rem;
-  width: 27rem;
+  height: 45rem;
+  width: 32rem;
   padding-inline: 1.5rem;
   background: var(--yellow);
   color: white;
@@ -87,7 +64,7 @@
   align-items: center;
   justify-content: center;
   @media (max-width: 30em) {
-    width: fit-content;
+    width: -webkit-fill-available;
     height: fit-content;
     margin: 0 20px;
     padding-inline: .5rem;
@@ -103,15 +80,15 @@
 .cardBox3 {
   box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
   height: 45rem;
-  width: 27rem;
+  width: 32rem;
   padding-inline: 1.5rem;
-  border-radius: 0 0.7rem 0.7rem 0;
+  border-radius: 0.7rem;
   display: flex;
   align-items: center;
   justify-content: center;
 
   @media (max-width: 30em) {
-    width: fit-content;
+    width: -webkit-fill-available;
     height: fit-content;
     margin: 0 20px;
     padding-inline: .5rem;
@@ -158,7 +135,7 @@
 .discount {
   font-weight: 900;
   margin-left: 0.5rem;
-  color: #b22222;
+  color: #ff4136;
   margin-top: 0.25rem;
   font-size: 20px;
   transition: all 0.3s;
@@ -218,6 +195,6 @@
 
 .popular{
   margin-bottom: -.5rem;
-  border-bottom: 3px solid #b22222;
-  color: #b22222;
+  border-bottom: 3px solid #ff4136;
+  color: #ff4136;
 }
